--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-slick": "^0.29.0",
     "rsuite": "^5.40.0",
     "slick-carousel": "^1.8.1",
+    "typescript": "^5.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
